Fix layout issues during signing

--- a/verdocs-web-sdk/src/components/controls/verdocs-checkbox/verdocs-checkbox.scss
+++ b/verdocs-web-sdk/src/components/controls/verdocs-checkbox/verdocs-checkbox.scss
@@ -14,6 +14,7 @@ verdocs-checkbox {
     width: 20px;
     height: 20px;
     flex-shrink: 0;
+    margin-right: 8px;
     line-height: 20px;
     border-radius: 2px;
     border-style: solid;
